# HPC

./: .gitignore  CMakeLists.txt  Makefile  README.md
app/: CMakeLists.txt  main.cpp
core/: IModule.h
modules/: CMakeLists.txt
modules/matmul/: CMakeLists.txt  matmul.cpp  matmul.cu  matmul.h
modules/spectogram/: CMakeLists.txt  image.cpp  spectogram.h  wav.cpp
modules/vecsum/: vecsum.cpp
src/: CMakeLists.txt
src/app/: CMakeLists.txt  main.cpp
src/core/: IModule.h
src/modules/: CMakeLists.txt
src/modules/bilateral/: CMakeLists.txt  bilateral.cpp  bilateral.h
src/modules/matmul/: matmul.cpp  matmul.cu
src/modules/spectogram/: CMakeLists.txt  image.h  spectogram.cpp  spectogram.cu  spectogram.h  wav.cpp  wav.h
src/modules/vecsum/: CMakeLists.txt  vecsum.cu  vecsum.h
src/utils/: CMakeLists.txt  image.cpp  image.h
